--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,11 @@ compose = "1.7.8"
 material3 = "1.3.2"
 material = "1.7.8"
 coil = "2.5.0"
+playServicesMaps = "19.1.0"
+playServicesLocation = "21.3.0"
+mapsCompose = "2.11.4"
+mapsUtils = "3.4.0"
+accompanistPermissions = "0.31.3-beta"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -54,6 +59,12 @@ kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+
+playServicesMaps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
+playServicesLocation = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
+mapsCompose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
+androidMapsUtils = { module = "com.google.maps.android:android-maps-utils", version.ref = "mapsUtils" }
+accompanistPermissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
