--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:networkSecurityConfig="@xml/network_security_config">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAXZkvjUDpWDbT3fuZjziHQHLcU4SLEdjs" />
+            android:value="" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
