--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,8 @@ playServicesLocation = "21.3.0"
 mapsCompose = "2.11.4"
 mapsUtils = "3.4.0"
 accompanistPermissions = "0.31.3-beta"
+media3 = "1.4.1"
+media3Exoplayer = "1.9.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -62,10 +64,12 @@ playServicesLocation = { module = "com.google.android.gms:play-services-location
 mapsCompose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
 androidMapsUtils = { module = "com.google.maps.android:android-maps-utils", version.ref = "mapsUtils" }
 accompanistPermissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
+androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3" }
+androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3" }
+media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3Exoplayer" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-
