--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ playServicesLocation = "21.3.0"
 mapsCompose = "2.11.4"
 mapsUtils = "3.4.0"
 accompanistPermissions = "0.31.3-beta"
+playServicesAuth = "21.3.0"
 media3 = "1.4.1"
 media3Exoplayer = "1.9.2"
 
@@ -64,6 +65,7 @@ playServicesLocation = { module = "com.google.android.gms:play-services-location
 mapsCompose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
 androidMapsUtils = { module = "com.google.maps.android:android-maps-utils", version.ref = "mapsUtils" }
 accompanistPermissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
+playServicesAuth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
 androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3" }
 androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3" }
 media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3Exoplayer" }
